<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".callMultiAPI.SecondActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/data1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title1"
        android:layout_marginTop="8dp"
        android:text="@string/data"/>

    <TextView
        android:id="@+id/title2"
        android:layout_below="@+id/data1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/data2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title2"
        android:layout_marginTop="8dp"
        android:text="@string/data"/>


</RelativeLayout>